route to get $fumetti contents from web.php

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
+
+.squared_img_top {
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    object-position: top;
+}
