--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,7 +1,27 @@
 @import '~bootstrap/scss/bootstrap';
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .squared_img_top {
     aspect-ratio: 1 / 1;
     object-fit: cover;
     object-position: top;
+}
+
+.header_logo {
+    width: 50px;
+}
+
+#jumbo {
+    height: 500px;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: top;
+    }
 }
